<resources>
    <string name="app_name">Brain Trainer</string>
    <string name="_30s">30s</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="correct">Correct !!</string>
    <string name="_0_0">0/0</string>
    <string name="_11_10">11 + 10</string>
    <string name="play_again">Play Again</string>
    <string name="go">GO!!</string>
</resources>
