<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/timerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/buttonBg"
        android:padding="10dp"
        android:text="@string/_30s"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gridView"
        app:layout_constraintEnd_toStartOf="@+id/sumTV"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/_0_0"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gridView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sumTV"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="10dp"
        android:text="@string/_11_10"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/timerTV"
        app:layout_constraintEnd_toStartOf="@+id/scoreTV"
        app:layout_constraintStart_toEndOf="@+id/timerTV" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        app:columnCount="2"
        app:layout_constraintBottom_toTopOf="@+id/answerTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sumTV"
        app:rowCount="2">

        <Button
            android:id="@+id/numBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:onClick="chooseAnswer"
            android:tag="0"
            android:text="@string/_2"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/num1Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:onClick="chooseAnswer"
            android:tag="1"
            android:text="@string/_3"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/num2Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_purple"
            android:onClick="chooseAnswer"
            android:tag="2"
            android:text="@string/_3"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/num3Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:onClick="chooseAnswer"
            android:tag="3"
            android:text="@string/_4"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>

    <TextView
        android:id="@+id/answerTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/correct"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/playAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridView" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="playAgain"
        android:padding="20dp"
        android:text="@string/play_again"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerTV" />
</android.support.constraint.ConstraintLayout>